# university

./: .gitignore  README.md
Algebra-and-calculus/: Algebra_01.ipynb  Algebra_02.ipynb  Algebra_03.ipynb  Algebra_04.ipynb  Algebra_05.ipynb  Algebra_06.ipynb  Algebra_07.ipynb  Algebra_08.ipynb  Algebra_09.ipynb  Algebra_1.ipynb  Algebra_10.ipynb  Algebra_11.ipynb  Algebra_12.ipynb  Algebra_13.ipynb  Algebra_14.ipynb  Algebra_15.ipynb  Algebra_16.ipynb  Algebra_17.ipynb  Algebra_18.ipynb  Algebra_2.ipynb  Algebra_3.ipynb  Algebra_4.ipynb  Calculus_01.ipynb  Calculus_02.ipynb  Calculus_03.ipynb  Calculus_04.ipynb  Calculus_05.ipynb  Calculus_06.ipynb  Calculus_07.ipynb  Calculus_08.ipynb  Calculus_09.ipynb  Calculus_1.ipynb  Calculus_10.ipynb  Calculus_11.ipynb  Calculus_12.ipynb  Calculus_13.ipynb  Calculus_14.ipynb  Calculus_16.ipynb  Calculus_18.ipynb  Calculus_2.ipynb  (+3 more)
Architecture-of-computing-systems/Task 01/app/: CMakeLists.txt  animal.cpp  animal.h  beast.cpp  beast.h  bird.cpp  bird.h  container.cpp  container.h  fish.cpp  fish.h  includes.cpp  includes.h  main.cpp
Architecture-of-computing-systems/Task 03/: main.py
Chess/Classes/: Cell.cs  Field.cs  Game.cs  Move.cs  Validator.cs
Chess/Main/: Constants.cs  Init.cs  (+1 more)
Computer-vision/: DETR.ipynb  Ex1_NN.ipynb  Ex2_Linear_classifier.ipynb  Ex3_FCN.ipynb  Ex4_CNN.ipynb  Ex5_Resnet.ipynb  Ex6_Real_Data.ipynb  Ex7_Encoder_Decorder.ipynb
Data-analysis/: KUNIN_ILYA_HW_1.ipynb  KUNIN_ILYA_HW_2.ipynb  KUNIN_ILYA_HW_3.ipynb  KUNIN_ILYA_HW_4.ipynb
My-library/: .gitignore  README.md  requirements.txt
(+614 files in other folders)
